--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
+
+    <h1 id="usuario"></h1>
+    <div id="divProductos" class="contenedor"></div>
+
     <script src="scripts.js"></script>
 </body>
-</html>
+</html> 
