--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
-    <h1 id="usuario"></h1>
-    <div id="divProductos" class="contenedor"></div>
+    <main>
+        <h1 id="usuario"></h1>
+        <div id="divProductos" class="contenedor"></div>
+    </main>
 
     <script src="scripts.js"></script>
 </body>
