--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
         <div id="divProductos" class="contenedor"></div>
     </main>
 
+    <form>
+        <div class="form1">
+          <label for="fname">Email : </label>
+          <input id="fname" type="email">
+        </div>
+        <div class="form1">
+          <label for="lname">Consulta : </label>
+          <input id="lname" type="text">
+        </div>
+        <div class="form1">
+           <input id="submit" type="submit">
+        </div>
+      </form>
+      <p></p>
+
+
     <script src="scripts.js"></script>
 </body>
 </html> 
