--- a/index.html
+++ b/index.html
@@ -1,36 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <title>Document</title>
-    <title>Inicio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+  <title>Inicio</title>
 </head>
+
 <body>
+  <main>
+    <div class="encabezado">
+      <div>
+        <h1>TiendaGamer</h1>
+      </div>
+      <div class="compra">
+        <button id="checkout" class="button" onclick="pay()">Pagar</button>
+      </div>
+    </div>
 
-    <main>
-        <h1 id="usuario"></h1>
-        <div id="divProductos" class="contenedor"></div>
-    </main>
+    <div class="contenedor">
+      <div class="cards">
+        <h2>PC INTEL CORE2</h2>
+        <h3>$20000</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 20000)">Agregar</button>
+      </div>
 
-    <form>
-        <div class="form1">
-          <label for="fname">Email : </label>
-          <input id="fname" type="email">
-        </div>
-        <div class="form1">
-          <label for="lname">Consulta : </label>
-          <input id="lname" type="text">
-        </div>
-        <div class="form1">
-           <input id="submit" type="submit">
-        </div>
-      </form>
-      <p></p>
+      <div class="cards">
+        <h2>PC AMD ATHLON</h2>
+        <h3>$28500</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 28500)">Agregar</button>
+      </div>
 
+      <div class="cards">
+        <h2>PC INTEL I3</h2>
+        <h3>$35500</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 35500)">Agregar</button>
+      </div>
 
-    <script src="scripts.js"></script>
+      <div class="cards">
+        <h2>PC INTEL I5</h2>
+        <h3>$42500</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 42500)">Agregar</button>
+      </div>
+
+      <div class="cards">
+        <h2>PC AMD RYZEN3</h2>
+        <h3>$55000</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 55000)">Agregar</button>
+      </div>
+
+      <div class="cards">
+        <h2>PC AMD RYZEN5</h2>
+        <h3>$15000</h3>
+        <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
+        <button class="button-add" onclick="add('compu1', 15000)">Agregar</button>
+      </div>
+    </div>
+  </main>
+
+  <form>
+    <div class="form1">
+      <label for="fname">Email : </label>
+      <input id="fname" type="email">
+    </div>
+    <div class="form1">
+      <label for="lname">Consulta : </label>
+      <input id="lname" type="text">
+    </div>
+    <div class="form1">
+      <input id="submit" type="submit">
+    </div>
+  </form>
+  <p></p>
+
+  <script src="scripts.js"></script>
 </body>
-</html> 
+
+</html>
