--- a/index.html
+++ b/index.html
@@ -15,52 +15,51 @@
       <div>
         <h1>TiendaGamer</h1>
       </div>
-      <div class="compra">
-        <button id="checkout" class="button" onclick="pay()">Pagar</button>
+      <div class="compra" id="compra">
       </div>
     </div>
 
     <div class="contenedor">
       <div class="cards">
         <h2>PC INTEL CORE2</h2>
-        <h3>$20000</h3>
+        <h3>$15000</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 20000)">Agregar</button>
+        <button class="button-add" id="boton1">Agregar</button>
       </div>
 
       <div class="cards">
         <h2>PC AMD ATHLON</h2>
-        <h3>$28500</h3>
+        <h3>$20000</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 28500)">Agregar</button>
+        <button class="button-add" id="boton2">Agregar</button>
       </div>
 
       <div class="cards">
         <h2>PC INTEL I3</h2>
-        <h3>$35500</h3>
+        <h3>28500</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 35500)">Agregar</button>
+        <button class="button-add" id="boton3">Agregar</button>
       </div>
 
       <div class="cards">
         <h2>PC INTEL I5</h2>
-        <h3>$42500</h3>
+        <h3>$35500</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 42500)">Agregar</button>
+        <button class="button-add" id="boton4">Agregar</button>
       </div>
 
       <div class="cards">
         <h2>PC AMD RYZEN3</h2>
-        <h3>$55000</h3>
+        <h3>$42500</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 55000)">Agregar</button>
+        <button class="button-add" id="boton5">Agregar</button>
       </div>
 
       <div class="cards">
         <h2>PC AMD RYZEN5</h2>
-        <h3>$15000</h3>
+        <h3>$55000</h3>
         <img src="https://cdnx.jumpseller.com/bitgame/image/22782181/resize/300/300?1656829647images/product-1.jpg" />
-        <button class="button-add" onclick="add('compu1', 15000)">Agregar</button>
+        <button class="button-add" id="boton6">Agregar</button>
       </div>
     </div>
   </main>
