Segunda entrega del desafio final

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="compra" id="compra"></div>
       <div>
-        <button id="dark">Vision</button>
+        <button id="dark">Dark/Light</button>
       </div>
     </div>
 
