--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" href="CSS/style.css">
+  <title>Inicio</title>
 </head>
 <body>
-  <header>
-    <h1>
-      CompraGamer
-    </h1>
-  </header>
-    <div class="container">
-        <div class="row">
-            <main id="items" class="col-sm-8 row"></main>
-            <aside class="col-sm-4">
-                <h2>Carrito</h2>
-                <ul id="carrito" class="list-group"></ul>
-                <hr>
-                <hr>
-                <p class="text-right">Total: <span id="total"></span>&euro;</p>
-                <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
-            </aside>
+  <div class="contenido">
+    <header>
+      <h1>
+        CompraGamer
+      </h1>
+    </header>
+      <div class="container">
+          <div class="row">
+              <main id="items" class="col-sm-8 row"></main>
+              <aside class="col-sm-4">
+                  <h2>Carrito</h2>
+                  <ul id="carrito" class="list-group"></ul>
+                  <hr>
+                  <hr>
+                  <p class="text-right">Total: $ <span id="total"></span></p>
+                  <button id="boton boton-vaciar" class="btn btn-danger">Vaciar</button>
+              </aside>
+          </div>
+      </div>
+      
+      <form>
+        <div class="form1">
+          <label for="fname">Email : </label>
+          <input id="fname" type="email">
         </div>
-    </div>
+        <div class="form1">
+          <label for="lname">Consulta : </label>
+          <input id="lname" type="text">
+        </div>
+        <div class="form1">
+          <button id="boton" class="boton1" type="submit"></button>
+        </div>
+      </form>
+      <h6></h6>
+  </div>
+  
 
-    <script src="scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.28/dist/sweetalert2.all.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
