--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div class="container">
           <div class="row">
               <main id="items" class="col-sm-8 row"></main>
-              <aside class="col-sm-4">
+              <aside class="col-sm-4 carrito">
                   <h2>Carrito</h2>
                   <ul id="carrito" class="list-group"></ul>
                   <hr>
                   <hr>
                   <p class="text-right">Total: $ <span id="total"></span></p>
-                  <button id="boton boton-vaciar" class="btn btn-danger">Vaciar</button>
+                  <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
               </aside>
           </div>
       </div>
@@ -39,10 +39,9 @@
           <input id="lname" type="text">
         </div>
         <div class="form1">
-          <button id="boton" class="boton1" type="submit"></button>
+          <input id="boton" class="boton1" type="submit">
         </div>
       </form>
-      <h6></h6>
   </div>
   
 
