--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   <hr>
                   <p class="text-right">Total: $ <span id="total"></span></p>
                   <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+                  <button id="botonComprar" class="btn btn-danger">Comprar</button>
               </aside>
           </div>
       </div>
