Desafio de Fetch

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       <h1>
         CompraGamer
       </h1>
+      <button class="learn-more">
+        <span class="circle" aria-hidden="true">
+        <span class="icon arrow"></span>
+        </span>
+        <a class="button-text" href="contacto.html">Contactanos</a>
+      </button>
     </header>
       <div class="container">
           <div class="row">
@@ -29,20 +35,6 @@
               </aside>
           </div>
       </div>
-      
-      <form>
-        <div class="form1">
-          <label for="fname">Email : </label>
-          <input id="fname" type="email">
-        </div>
-        <div class="form1">
-          <label for="lname">Consulta : </label>
-          <input id="lname" type="text">
-        </div>
-        <div class="form1">
-          <input id="boton" class="boton1" type="submit">
-        </div>
-      </form>
   </div>
   
 
