Desafio de Fetch

--- a/contacto.html
+++ b/contacto.html
@@ -22,10 +22,11 @@
                 <a class="button-text" href="index.html">Inicio</a>
               </button>
           </header>
-
-          <div id="map">asdasd</div>
-
-        <form>
+          <div>
+            <h2>Podes encontrarnos aqui</h2>
+            <div id="map"></div>
+          </div>
+          <form>
             <div class="form1">
               <label for="fname">Email : </label>
               <input id="fname" type="email">
@@ -40,7 +41,6 @@
           </form>
     </div>
 
-    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.28/dist/sweetalert2.all.min.js"></script>
     <script src="contacto.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
