--- a/contacto.html
+++ b/contacto.html
@@ -23,10 +23,14 @@
                 <a class="button-text" href="index.html">Inicio</a>
               </button>
           </header>
+
           <div>
             <h2>Podes encontrarnos aqui</h2>
             <div id="map"></div>
           </div>
+
+          <div id="divHorarios" class="contenedor"></div>
+
           <form>
             <div class="form1">
               <label for="fname">Email : </label>
@@ -40,6 +44,7 @@
               <input id="boton" class="boton1" type="submit">
             </div>
           </form>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.28/dist/sweetalert2.all.min.js"></script>
